# lokahome_api

./: .env  .env.example  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.claude/agents/: backend-python-expert.md
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: admin.py  auth.py  bookings.py  messages.py  payments.py  properties.py  reviews.py  services.py
app/core/: config.py  database.py  exceptions.py  init_db.py  redis.py  security.py  seed_data.py
app/models/: __init__.py  base.py  booking.py  message.py  payment.py  property.py  review.py  service.py  user.py
app/repositories/: __init__.py  base.py  booking.py  property.py  user.py
app/schemas/: __init__.py  base.py  booking.py  message.py  payment.py  property.py  review.py  service.py  user.py
app/services/: __init__.py  auth.py  booking.py  messaging.py  payment.py  property.py  review.py  service_marketplace.py  user.py
app/tasks/: __init__.py  celery_app.py  email.py  maintenance.py  notifications.py  payments.py
docs/: document-_technique.md  toitplus_objectif_info.md
tests/: conftest.py
tests/unit/: test_auth.py  test_properties.py
